--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
-  font-size: 10px;
   box-sizing: border-box;
   font-family: sans-serif;
 }
